<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">乾多多</string>
    <string name="mdd_app_name">乾多多</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="back">返回</string>
    <string name="enter">确定</string>
    <string name="error_params_null">参数不可为空</string>
    <string name="dialog_message">请稍等。。。</string>
    <string name="account">乾多多转账</string>
    <string name="account_username">平台用户名:</string>
    <string name="pay_password">支付密码:</string>
    <string name="network_error">网络无法连接</string>
    <string name="input_passwrod">请输入支付密码:</string>
    <string name="input_passwrod_width">请输入支付密码</string>
    <string name="recharge_submit">确认充值</string>
    <string name="deposit_submit">确认提现</string>
    <string name="account_submit">确认转账</string>
    <string name="register_submit">确认注册</string>
    <string name="mdd_name">乾多多用户名:</string>
    <string name="amount">充值金额:</string>
    <string name="money">元</string>
    <string name="recharge">充值</string>
    <string name="username">开户名:</string>
    <string name="id_card">身份证号码:</string>
    <string name="bank_card_type">银行卡类型:</string>
    <string name="bank">开户行:</string>
    <string name="bank_type">卡类型:</string>
    <string name="bank_card">银行账号:</string>
    <string name="bank_mobile">预留号码:</string>
    <string name="message_code">短信验证码:</string>
    <string name="email_code">邮箱验证码:</string>
    <string name="send_msg_message">发送短信验证码</string>
    <string name="send_voice_message">发送语音验证码</string>
    <string name="receive_name">收款人姓名:</string>
    <string name="mdd_name2">乾多多账户:</string>
    <string name="amount_info">金额:</string>
    <string name="send_msg_success">已发送，发件人:京东/网银在线</string>
    <string name="arrive_money">到账金额:</string>
    <string name="fee">手续费:</string>
    <string name="deduct">合计扣除:</string>
    <string name="withdraw_deposit">提现</string>
    <string name="back_message">交易中途终止</string>
    <string name="show_bank">选择开户行</string>
    <string name="mdd_next">下&#160;&#160;一&#160;&#160;步</string>
    <string name="input_mobile">请输入手机号码</string>
    <string name="input_bank_card">请输入银行账号</string>
    <string name="input_msg_code">请填写验证码</string>
    <string name="input_account">请输入乾多多账户</string>
    <string name="input_idcard">请输入身份证号码</string>
    <string name="time">剩余</string>
    <string name="second">秒</string>
    <string name="register_name">注册人:</string>
    <string name="register_mdd_name">您在平台的用户名:</string>
    <string name="set_login_psd">设置登陆密码(登陆时需验证)</string>
    <string name="set_pay_psd">设置支付密码(付款时需验证)</string>
    <string name="set_bind">设置绑定信息(可用于登陆)</string>
    <string name="login_psd">登陆密码:</string>
    <string name="input_again">再次输入:</string>
    <string name="pay_psd">支付密码:</string>
    <string name="input_login_pad">请输入登陆密码</string>
    <string name="input_login_pad_again">请再次输入登陆密码</string>
    <string name="input_pay_psd">请输入支付密码</string>
    <string name="input_pay_psd_again">请再次输入支付密码</string>
    <string name="input_username">请输入用户名</string>
    <string name="register_title">乾多多开户</string>
    <string name="register_error">开户出错，请重试</string>
    <string name="login_psd_error">登陆密码必须是由大于6位的数字和字母组成</string>
    <string name="pay_psd_error">支付密码必须是由大于6位的数字和字母组成</string>
    <string name="psd_error">两次输入的密码不一样</string>
    <string name="send_msg_code">发送短信验证码</string>
    <string name="send_email_code">发送邮箱验证码</string>
    <string name="send_emal">选择验证邮箱</string>
    <string name="send">验证</string>
    <string name="no_send">不验证</string>
    <string name="mobile">手机号码:</string>
    <string name="mobile_hint">请输入注册手机号码</string>
    <string name="bind_email">注册邮箱:</string>
    <string name="input_email">请输入邮箱</string>
    <string name="send_msg_error_1">您的手机提供商屏蔽了乾多多的邮件请求，请更换手机再次注册</string>
    <string name="send_msg_error_2">您的手机验证码今天发送已超过5次，请明天再试</string>
    <string name="send_email_error">邮箱验证码发送错误</string>
    <string name="warm_prompt">温馨提示:</string>
    <string name="moble_people">手机注册人</string>
    <string name="name">姓&#160;&#160;&#160;&#160;名:</string>
    <string name="idcard">身份证:</string>
    <string name="bind_message">选择绑定作为托管账户的乾多多账户</string>
    <string name="bind_else_message">绑定其他乾多多账号作为托管账户</string>
    <string name="no_login_psd">(非登录密码)</string>
    <string name="bind_bymessage">通过短信验证码绑定</string>
    <string name="bind_title">乾多多托管账户绑定</string>
    <string name="bind_submit">确认绑定</string>
    <string name="email">电子邮箱:</string>
    <string name="email_people">邮箱注册人</string>
    <string name="flag_1">系统检测到您的手机号和邮箱均已注册过乾多多账户</string>
    <string name="flag_2">手机号和邮箱已被别人注册过乾多多账户，请更换手机号和邮箱重新注册</string>
    <string name="flag_3">系统检测到您的手机号和邮箱均已注册过乾多多账户是是不同的账号</string>
    <string name="flag_4">系统检测到您的手机号已注册过乾多多账户</string>
    <string name="flag_5">系统检测到您的邮箱已注册过乾多多账户</string>
    <string name="mobile_email_register">手机和邮箱注册人</string>
    <string name="dentification_num">营业执照:</string>
    <string name="user_account">账&#160;&#160;&#160;&#160;户:</string>
    <string name="mdd_user_account">用户账户:</string>
    <string name="image_code">验证码:</string>
    <string name="input_image_code">请输入图形验证码(点击更换)</string>
    <string name="status">当前状态:</string>
    <string name="open">本次开启:</string>
    <string name="close">本次关闭:</string>
    <string name="authorization_submit">确认授权</string>
    <string name="set_question">设置安保问题(用于找回密码)</string>
    <string name="question_1">问题1:</string>
    <string name="question_2">问题2:</string>
    <string name="question_3">问题3:</string>
    <string name="question_hint">请选择问题</string>
    <string name="question_choose">自定义</string>
    <string name="answer">请输入答案</string>
    <string name="answer_1">答案1:</string>
    <string name="set_question_choose">立即设置</string>
    <string name="platform">平台账号:</string>
    <string name="email_message">填写邮箱(可用于登录)</string>
    <string name="enter_message">确认信息</string>
    <string name="check">验证</string>
    <string name="nocheck">不验证</string>
    <string name="user_name">姓名:</string>
    <string name="company_name">平台运营公司</string>
    <string name="mdd_account_name">乾多多用户名</string>
    <string name="platform_name">平台名称</string>
    <string name="platform_user_name">平台用户名</string>
    <string name="three_wait_text">正在获取银行信息</string>
    <string name="explain">说明:</string>
    <string name="card_memery">存储卡</string>
    <string name="card_creditss">信用卡</string>
    <string name="threeinone_submit">确认认证</string>
    <string name="province">开户城市:</string>
    <string name="bind_quick">快捷绑定</string>
    <string name="bind_remit">汇款绑定</string>
    <string name="remit_text">提交2小时后，支付宝会往这张卡上汇款，金额在0.01元~0.99元间，您需要确认汇款金额后，此卡才能绑定成功。</string>
    <string name="pro">省</string>
    <string name="city">市</string>
    <string name="mdd_cancle">取消</string>
    <string name="platform_message">请输入乾多多标识(以P开头)</string>
    <string name="public_key">乾多多公钥</string>
    <string name="private_key">乾多多私钥</string>
    <string name="mdd_url">接口路径</string>
    <string name="wait_text">请稍等,正在获取数据...</string>
    <string name="look_userinfo">用户信息(点击查看)</string>
    <string name="hint_mdd_url">请输入接口路径地址</string>
    <string name="hint_msg_code">请输入短信验证码</string>
    <string name="bind_mobile_email">手机和邮箱注册人</string>
    <string name="title_activity_name_authorization">NameAuthorizationActivity</string>
    <string name="hint_mdd_mobile">请输入手机号码</string>
    <string name="hint_email">请输入电子邮箱</string>
    <string name="hint_email_code">请输入邮箱验证码</string>

</resources>
