<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" 
    android:background="@color/main_back">

    <TextView
        android:id="@+id/imq_message_text"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@color/title_back"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <ScrollView
        android:id="@+id/dialog_scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/dialog_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/url_layout"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/mdd_bg_setup" >

                <TextView
                    android:id="@+id/url_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textSize="13sp" 
                    android:text="@string/mdd_url"/>

                <EditText
                    android:id="@+id/url_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/url_text"
                    android:background="@color/white"
                    android:gravity="center_vertical|left"
                    android:textSize="13sp" 
                    android:hint="@string/hint_mdd_url"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/plat_layout"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/mdd_bg_setup" >

                <TextView
                    android:id="@+id/plat_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/platform"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/plat_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/plat_text"
                    android:background="@color/white"
                    android:gravity="center_vertical|left"
                    android:hint="@string/platform_message"
                    android:textSize="13sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/mdd_public_key"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/public_key_text"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/imq_base_bg"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/public_key"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/public_key_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/public_key_text"
                    android:background="@color/white"
                    android:gravity="left|top"
                    android:minHeight="80dp" 
                    android:maxHeight="200dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/mdd_private_key"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/private_key_text"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/imq_base_bg"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/private_key"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/private_key_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/private_key_text"
                    android:background="@color/white"
                    android:gravity="left|top"
                    android:minHeight="100dp" 
                    android:maxHeight="200dp"/>
            </RelativeLayout>

            <Button
                android:id="@+id/submit"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/sub_btn_back"
                android:gravity="center"
                android:text="@string/enter"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>